--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".Reminders"/>
         <activity android:name=".NicheTasksList"/>
         <activity android:name=".NicheTasksAdd"/>
+        <activity android:name=".PointsTally"/>
 
     </application>
 
