Fifth Commit - Completed registration & major UI upgrades

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".NicheTasksAdd"/>
         <activity android:name=".PointsTally"/>
         <activity android:name=".Registration"/>
+        <activity android:name=".QuickStart"/>
+        <activity android:name=".Profile"/>
 
     </application>
 
