--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.google.android.material:material:1.4.0-rc01'
+    implementation "com.android.support:support-compat:28.0.0"
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 
 
 }
