--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/my_mommy_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/my_mommy_icon"
+        android:resizeableActivity="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
